Suppress Indentation checkstyle check for MapsTest.java.